fix(mobile): prevent expert list from collapsing into narrow column

--- a/assets/scss/pages/_front-page-expert.scss
+++ b/assets/scss/pages/_front-page-expert.scss
@@ -310,7 +310,9 @@
   }
 
   .expert-section__left {
-    display: contents;
+    display: block;
+    width: #{mixins.vw(355px, 375px)};
+    min-width: 0;
   }
 
   .expert-section__quote {
@@ -361,9 +363,9 @@
   /* Desktop max-width (vw/1440) інакше дає ~112px на телефоні й ламає колонку */
   .expert-section__details {
     max-width: none;
-    width: #{mixins.vw(355px, 375px)};
+    width: 100%;
     min-width: 0;
-    align-self: stretch;
+    align-self: auto;
     display: block;
     box-sizing: border-box;
     margin-top: #{mixins.vw(24px, 375px)};
@@ -385,8 +387,9 @@
     padding-left: #{mixins.vw(36px, 375px)};
     font-size: #{mixins.vw(14px, 375px)};
     line-height: 150%;
-    overflow-wrap: break-word;
-    word-break: normal;
+    overflow-wrap: normal;
+    word-break: keep-all;
+    hyphens: none;
     white-space: normal;
   }
 
